chore(package.json): extract arguments to npm-config

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "lint": "eslint bin src test",
     "pretest": "npm run lint",
     "pretest:cov": "npm run lint",
-    "test:cov": "babel-node ./node_modules/.bin/isparta cover --report lcov _mocha -- --compilers js:babel/register",
-    "test": "mocha --compilers js:babel/register"
+    "test:cov": "babel-node ./node_modules/.bin/isparta cover --report lcov _mocha -- $npm_package_config_mocha",
+    "test": "mocha $npm_package_config_mocha"
+  },
+  "config": {
+    "mocha": "--compilers js:babel/register"
   },
   "repository": {
     "type": "git",
