--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "scripts": {
     "clean": "rm -rf lib",
-    "build": "npm run lint && npm run clean && babel src --out-dir lib",
+    "prebuild": "npm run lint && npm run clean",
+    "build": "babel src --out-dir lib",
     "lint": "eslint bin src test",
     "pretest": "npm run lint",
     "pretest:cov": "npm run lint",
