--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "clean": "rm -rf lib",
+    "clean": "rimraf lib",
     "prebuild": "npm run lint && npm run clean",
     "build": "babel src --out-dir lib",
     "lint": "eslint bin src test",
@@ -56,6 +56,7 @@
     "isparta": "^3.0.3",
     "istanbul": "^0.3.18",
     "mocha": "^2.2.5",
+    "rimraf": "^2.4.3",
     "sinon": "^1.16.1",
     "tomchentw-npm-dev": "^3.0.0"
   },
