--- a/examples/gh-pages/package.json
+++ b/examples/gh-pages/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "clean": "rm -rf ../../public/index.html ../../public/assets ../../tmp",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production reacthtmlpack buildToDir ../../public ./scripts/*.html.js",
+    "build": "NODE_ENV=production reacthtmlpack buildToDir ../../public ./views/*.html.js",
     "predev": "npm run clean",
-    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public ./scripts/*.html.js",
+    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public ./views/*.html.js",
     "prestart": "npm run clean",
-    "start": "NODE_ENV=development reacthtmlpack devServer ./Client.webpackConfig.js ../../public ./scripts/*.html.js"
+    "start": "NODE_ENV=development reacthtmlpack devServer ./Client.webpackConfig.js ../../public ./views/*.html.js"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
