--- a/examples/SimpleAssets/package.json
+++ b/examples/SimpleAssets/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "example of showing simple script entry point with extracted css files using reacthtmlpack",
   "scripts": {
-    "clean": "rm -rf ../../public/index.html ../../public/assets ../../tmp",
-    "build": "npm run clean && NODE_ENV=production reacthtmlpack buildToDir ../../public ./scripts/*.html.js",
-    "watch": "npm run clean && NODE_ENV=development reacthtmlpack watchAndBuildToDir ../../public ./scripts/*.html.js",
-    "dev": "npm run clean && NODE_ENV=development reacthtmlpack buildToDir ../../public ./scripts/*.html.js"
+    "clean": "rimraf ../../public/index.html ../../public/assets",
+    "prebuild": "npm run clean",
+    "build": "NODE_ENV=production reacthtmlpack buildToDir ../../public ./views/*.html.js",
+    "prewatch": "npm run clean",
+    "watch": "NODE_ENV=development reacthtmlpack watchAndBuildToDir ../../public ./views/*.html.js",
+    "predev": "npm run clean",
+    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public ./views/*.html.js"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
@@ -14,6 +17,7 @@
     "bootstrap": "^3.3.5",
     "css-loader": "^0.16.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "rimraf": "^2.4.3",
     "style-loader": "^0.12.3"
   },
   "dependencies": {
