--- a/examples/SimpleScript/package.json
+++ b/examples/SimpleScript/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "example of showing simple script entry point using reacthtmlpack",
   "scripts": {
-    "clean": "rm -rf ../../public/index.html ../../public/assets ../../tmp",
-    "dev": "npm run clean && NODE_ENV=development reacthtmlpack buildToDir ../../public ./scripts/*.html.js"
+    "clean": "rimraf ../../public/index.html ../../public/assets ../../tmp",
+    "predev": "npm run clean",
+    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public ./views/*.html.js"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2"
+    "babel-loader": "^5.3.2",
+    "rimraf": "^2.4.3"
   },
   "dependencies": {
     "node-libs-browser": "^0.5.2",
