feat(cli): add mkdirp before writing files
* Fixes #9

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "glob": "^5.0.14",
     "glob2base": "0.0.12",
     "lodash": "^3.10.1",
+    "mkdirp": "^0.5.1",
     "react": "^0.13.3",
     "rx": "^3.1.1",
     "transducers-js": "^0.4.174",
