fix(core): correct Rx.js style of using streams
* remove ramda and transducers-js
* Fixes #17

BREAKING CHANGE

__chunkFilepath__: now uses relatvie path to the current `.html.js` file

  - Affected Components:
    * WebpackScriptEntry
    * WebpackStyleEntry
    * WebpackNullEntry
    * ReactRenderToStringEntry

  - Before:
    ```
    // index.html.js
    <ReactRenderToStringEntry
      id="react-container"
      tagName="div"
      chunkName="server"
      chunkFilepath="./scripts/ReactRoot.js" // Base path is process.cwd(), the folder you invoked `reacthtmlpack` CLI
      configFilepath="../Server.webpackConfig.js"
    />
    ```

  - After:
    ```
    // index.html.js
    <ReactRenderToStringEntry
      id="react-container"
      tagName="div"
      chunkName="server"
      chunkFilepath="../scripts/ReactRoot.js" // Base path is NOW index.html.js
      configFilepath="../Server.webpackConfig.js"
    />
    ```

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,8 @@
 examples/**
 lib/**
 public/**
-__tests__/**
+**/__tests__/**
+**/__utils__/**
+**/__mocks__/**
+**/__fixtures__/**
 test/fixture/file/**
