--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -37,5 +37,8 @@ exclude_paths:
 - examples/**
 - lib/**
 - public/**
-- __tests__/**
+- **/__tests__/**
+- **/__utils__/**
+- **/__mocks__/**
+- **/__fixtures__/**
 - test/fixture/file/**
