--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prebuild": "npm run lint && npm run clean",
     "build": "babel src --out-dir lib",
     "build:watch": "npm run build -- --watch",
-    "lint": "eslint bin src test",
+    "lint": "eslint bin src",
     "pretest": "npm run lint",
     "pretest:cov": "npm run lint",
     "test:cov": "babel-node ./node_modules/.bin/isparta cover --report lcov _mocha -- $npm_package_config_mocha",
@@ -26,7 +26,7 @@
     "test": "mocha $npm_package_config_mocha"
   },
   "config": {
-    "mocha": "--compilers js:babel/register"
+    "mocha": "--compilers js:babel/register ./src/**/__tests__/*-test.js"
   },
   "repository": {
     "type": "git",
@@ -70,10 +70,8 @@
     "glob2base": "0.0.12",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
-    "ramda": "^0.17.1",
     "react": "^0.13.3",
     "rx": "^3.1.1",
-    "transducers-js": "^0.4.174",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   }
