--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "mocha $npm_package_config_mocha"
   },
   "config": {
-    "mocha": "--compilers js:babel/register ./src/**/__tests__/*-test.js"
+    "mocha": "--compilers js:babel/register ./src/**/__tests__/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -51,16 +51,14 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "babel-eslint": "^4.1.0",
-    "chai": "^3.2.0",
     "codeclimate-test-reporter": "^0.1.0",
-    "dirty-chai": "^1.2.2",
     "eslint": "^1.2.1",
     "eslint-plugin-react": "^3.2.3",
+    "expect": "^1.12.0",
     "isparta": "^3.0.3",
     "istanbul": "^0.3.18",
     "mocha": "^2.2.5",
     "rimraf": "^2.4.3",
-    "sinon": "^1.16.1",
     "tomchentw-npm-dev": "^3.0.0"
   },
   "dependencies": {
