--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "isparta": "^3.0.3",
     "istanbul": "^0.3.18",
     "mocha": "^2.2.5",
+    "react": "^0.14.0",
     "rimraf": "^2.4.3",
-    "tomchentw-npm-dev": "^3.0.0"
+    "tomchentw-npm-dev": "^3.0.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
     "commander": "^2.8.1",
@@ -68,9 +71,11 @@
     "glob2base": "0.0.12",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
-    "react": "^0.13.3",
-    "rx": "^3.1.1",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
+    "rx": "^4.0.0"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   }
 }
