--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "commander": "^2.8.1",
     "eval-as-module": "^0.1.1",
+    "fbjs": "^0.3.1",
     "glob": "^5.0.14",
     "glob2base": "0.0.12",
     "lodash": "^3.10.1",
