--- a/examples/AssetsWithDevServer/package.json
+++ b/examples/AssetsWithDevServer/package.json
@@ -5,26 +5,28 @@
   "scripts": {
     "clean": "rimraf ../../public/index.html ../../public/assets",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production reacthtmlpack buildToDir ../../public ./views/*.html.js",
+    "build": "NODE_ENV=production reacthtmlpack buildToDir ../../public './views/*.html.js'",
     "predev": "npm run clean",
-    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public ./views/*.html.js",
+    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public './views/*.html.js'",
     "prestart": "npm run clean",
-    "start": "NODE_ENV=development reacthtmlpack devServer ./AssetsWithDevServer.webpackConfig.js ../../public ./views/*.html.js"
+    "start": "NODE_ENV=development reacthtmlpack devServer ./AssetsWithDevServer.webpackConfig.js ../../public './views/*.html.js'"
   },
   "devDependencies": {
-    "babel-core": "^5.8.22",
+    "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
-    "css-loader": "^0.16.0",
+    "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
-    "react-hot-loader": "^1.2.9",
+    "react-hot-loader": "^1.3.0",
     "rimraf": "^2.4.3",
-    "style-loader": "^0.12.3"
+    "style-loader": "^0.12.4",
+    "webpack": "^1.12.2"
   },
   "dependencies": {
-    "node-libs-browser": "^0.5.2",
+    "node-libs-browser": "^0.5.3",
     "normalize.css": "^3.0.3",
-    "react": "^0.13.3",
-    "react-google-maps": "^2.0.3"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-google-maps": "^4.0.0"
   }
 }
