--- a/examples/SimpleScript/package.json
+++ b/examples/SimpleScript/package.json
@@ -5,16 +5,18 @@
   "scripts": {
     "clean": "rimraf ../../public/index.html ../../public/assets",
     "predev": "npm run clean",
-    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public ./views/*.html.js"
+    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public './views/*.html.js'"
   },
   "devDependencies": {
-    "babel-core": "^5.8.22",
+    "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "rimraf": "^2.4.3"
+    "rimraf": "^2.4.3",
+    "webpack": "^1.12.2"
   },
   "dependencies": {
-    "node-libs-browser": "^0.5.2",
-    "react": "^0.13.3",
-    "react-google-maps": "^2.0.3"
+    "node-libs-browser": "^0.5.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-google-maps": "^4.0.0"
   }
 }
