--- a/examples/gh-pages/package.json
+++ b/examples/gh-pages/package.json
@@ -5,31 +5,33 @@
   "scripts": {
     "clean": "rimraf ../../public/index.html ../../public/assets",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production reacthtmlpack buildToDir ../../public ./views/*.html.js",
+    "build": "NODE_ENV=production reacthtmlpack buildToDir ../../public './views/*.html.js'",
     "predev": "npm run clean",
-    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public ./views/*.html.js",
+    "dev": "NODE_ENV=development reacthtmlpack buildToDir ../../public './views/*.html.js'",
     "prestart": "npm run clean",
-    "start": "NODE_ENV=development reacthtmlpack devServer ./Client.webpackConfig.js ../../public ./views/*.html.js"
+    "start": "NODE_ENV=development reacthtmlpack devServer ./Client.webpackConfig.js ../../public './views/*.html.js'"
   },
   "devDependencies": {
-    "babel-core": "^5.8.22",
+    "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "css-loader": "^0.16.0",
+    "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
-    "node-sass": "~3.2.x",
+    "node-sass": "~3.3.x",
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^1.2.9",
+    "react-hot-loader": "^1.3.0",
     "rimraf": "^2.4.3",
-    "sass-loader": "^2.0.1",
-    "style-loader": "^0.12.3"
+    "sass-loader": "^3.0.0",
+    "style-loader": "^0.12.4",
+    "webpack": "^1.12.2"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.5",
-    "classnames": "^2.1.3",
-    "node-libs-browser": "^0.5.2",
-    "react": "^0.13.3",
-    "react-google-maps": "^2.0.3"
+    "classnames": "^2.1.5",
+    "node-libs-browser": "^0.5.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-google-maps": "^4.0.0"
   }
 }
