--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -37,8 +37,7 @@ exclude_paths:
 - examples/**
 - lib/**
 - public/**
-- **/__tests__/**
-- **/__utils__/**
-- **/__mocks__/**
-- **/__fixtures__/**
-- test/fixture/file/**
+- __tests__/**
+- __utils__/**
+- __mocks__/**
+- __fixtures__/**
